--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h1 class="header_text">Ты будешь моей валентинкой?</h1>
         </div>
         <div class="gif_container">
-            <img src="./img/Heartshooting.gif" alt="Cute animated illustration">
+            <img src="./Heartshooting.gif" alt="Cute animated illustration">
         </div>
         <div class="buttons">
             <button class="btn" id="yesButton" onclick="yesPage()">Да</button>
