--- a/no.html
+++ b/no.html
@@ -13,7 +13,7 @@
         </div>
         <div class="gif_container">
             <img
-                src="./img/5816-myaowlcat-sweat.gif"
+                src="./5816-myaowlcat-sweat.gif"
                 alt="Cute animated illustration"
             />
         </div>
